--- a/src/notes.html
+++ b/src/notes.html
@@ -76,8 +76,7 @@
                 </div>
             </div>
 
-            <div>  <a style="padding:10px;display:block;" href="http://androidcss.com/css/css3-floating-button-tutorial/" target="_blank">Click here for complete tutorial</a>
-    
+            <div> 
                 <a href="#" class="float">
                     <i class="fa fa-plus my-float"></i>
                     </a></div>
