--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="../styles/styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
     <!-- bootstrap connect -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -51,7 +51,6 @@
         <!-- upper section -->
         <div class="container text-center">
             <div class="row">
-
                 <div class="col-md-7 col-sm-12 ">
                     <h2 class="upheader">Welcome To Snap Library</h2>
                     <p class="uppara">Are a Student, A worker, An undergraduate? Short note is very compulsory this when
@@ -111,7 +110,7 @@
                             }
 
                             function setSiteRedirect(user){
-                                window.location.replace("notes.html");
+                                window.location.replace("src/notes.html");
                             }
 
                             checkuserstate();
@@ -121,7 +120,7 @@
                 </div>
 
                 <div class="col-md-5 col-sm-12 pt-6">
-                    <img src="../images/header-removebg.png" class="img" alt="header image">
+                    <img src="images/header-removebg.png" class="img" alt="header image">
                 </div>
 
 
@@ -136,7 +135,7 @@
 
                     <div class="col-md-6  ">
                         <div class="pray">
-                            <img src="../images/notes-removebg.png " class="img-fluid" alt="notes image">
+                            <img src="images/notes-removebg.png " class="img-fluid" alt="notes image">
                         </div>
                     </div>
 
@@ -267,7 +266,7 @@
                     <div class="col-md-3 col-sm-12">
                         <div class="our_team">
                             <div class="team_image">
-                                <img src="../images/nuyun.jpeg" alt="nuyun image">
+                                <img src="images/nuyun.jpeg" alt="nuyun image">
                             </div>
                             <div class="team_content">
                                 <h2>Nuyun Pabasara</h2>
@@ -290,7 +289,7 @@
                     <div class="col-md-4 col-sm-12">
                         <div class="our_team">
                             <div class="team_image">
-                                <img src="../images/harindu.jpeg" alt="harindu image">
+                                <img src="images/harindu.jpeg" alt="harindu image">
                             </div>
                             <div class="team_content">
                                 <h2>Harindu Mansaka</h2>
@@ -314,7 +313,7 @@
                     <div class=" col-md-3 col-sm-12">
                         <div class="our_team">
                             <div class="team_image">
-                                <img src="../images/thameera.jpeg" alt="thameera image">
+                                <img src="images/thameera.jpeg" alt="thameera image">
                             </div>
                             <div class="team_content">
                                 <h2>Thameera Lahiru</h2>
