--- a/index.html
+++ b/index.html
@@ -260,111 +260,108 @@
 
             <div class="container text-center">
                 <h1 class="text-dark">Our Team</h1>
-                <!-- </div> -->
-                <div class="row d-flex flex-md-row flex-wrap">
+            <!-- </div> -->
+            <div class="row d-flex flex-md-row flex-wrap">
 
-                    <div class="col-md-3 col-sm-12">
-                        <div class="our_team">
-                            <div class="team_image">
-                                <img src="images/nuyun.jpeg" alt="nuyun image">
-                            </div>
-                            <div class="team_content">
-                                <h2>Nuyun Pabasara</h2>
-                                <p>Backend Developer</p>
-                            </div>
-                            <div class="social">
-                                <div class="icon">
-                                    <i class="fab fa-facebook fa-2x px-2"></i>
-                                    <i class="fab fa-linkedin fa-2x px-2"></i>
-                                    <i class="fab fa-github fa-2x px-2"></i>
-                                </div>
+                <div class="col-md-3 col-sm-12">
+                    <div class="our_team">
+                        <div class="team_image">
+                            <img src="images/nuyun.jpeg" alt="nuyun image">
+                        </div>
+                        <div class="team_content">
+                            <h2>Nuyun Pabasara</h2>
+                            <p>Backend Developer</p>
+                        </div>
+                        <div class="social">
+                            <div class="icon">
+                                <a href="https://www.facebook.com/nuyun.pabasara.5"><i class="fab fa-facebook fa-2x px-2"></i></a>
+                                <a href="https://www.linkedin.com/in/nuyun-pabasara-3159841b5/"><i class="fab fa-linkedin fa-2x px-2"></i></a>
+                                <a href="https://github.com/Nuyun-Kalamullage"><i class="fab fa-github fa-2x px-2"></i></a>
                             </div>
                         </div>
                     </div>
+                </div>
 
-                    <div class="col-md-1 mb-10">
-
-                    </div>
-
-                    <div class="col-md-4 col-sm-12">
-                        <div class="our_team">
-                            <div class="team_image">
-                                <img src="images/harindu.jpeg" alt="harindu image">
-                            </div>
-                            <div class="team_content">
-                                <h2>Harindu Mansaka</h2>
-                                <h5>Lead</h5>
-                                <p>Security Reasearcher</p>
-                            </div>
-                            <div class="social">
-                                <div class="icon">
-                                    <i class="fab fa-facebook fa-2x px-2"></i>
-                                    <i class="fab fa-linkedin fa-2x px-2"></i>
-                                    <i class="fab fa-github fa-2x px-2"></i>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-1 mb-10">
-
-                    </div>
-
-                    <div class=" col-md-3 col-sm-12">
-                        <div class="our_team">
-                            <div class="team_image">
-                                <img src="images/thameera.jpeg" alt="thameera image">
-                            </div>
-                            <div class="team_content">
-                                <h2>Thameera Lahiru</h2>
-                                <p>Frontend Developer</p>
-                            </div>
-                            <div class="social">
-                                <div class="icon">
-                                    <i class="fab fa-facebook fa-2x px-2"></i>
-                                    <i class="fab fa-linkedin fa-2x px-2"></i>
-                                    <i class="fab fa-github fa-2x px-2"></i>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-1 mb-10">
-
-                    </div>
-
+                <div class="col-md-1 mb-10">
 
                 </div>
+
+                <div class="col-md-4 col-sm-12">
+                    <div class="our_team">
+                        <div class="team_image">
+                            <img src="images/harindu.jpeg" alt="harindu image">
+                        </div>
+                        <div class="team_content">
+                            <h2>Harindu Mansaka</h2>
+                            <h5>Lead</h5>
+                            <p>Security Reasearcher</p>
+                        </div>
+                        <div class="social">
+                            <div class="icon">
+                                <a href="https://www.facebook.com/profile.php?id=100010992319120"><i class="fab fa-facebook fa-2x px-2"></i></a>
+                                <a href="https://www.linkedin.com/in/harindu-mansaka-2b093b214"><i class="fab fa-linkedin fa-2x px-2"></i></a>
+                                <a href="https://github.com/Harindu-Mansaka"><i class="fab fa-github fa-2x px-2"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-1 mb-10">
+
+                </div>
+
+                <div class=" col-md-3 col-sm-12">
+                    <div class="our_team">
+                        <div class="team_image">
+                            <img src="images/thameera.jpeg" alt="thameera image">
+                        </div>
+                        <div class="team_content">
+                            <h2>Thameera Lahiru</h2>
+                            <p>Frontend Developer</p>
+                        </div>
+                        <div class="social">
+                            <div class="icon">
+                                <a href="https://www.facebook.com/thameera.lahiru/"><i class="fab fa-facebook fa-2x px-2"></i></a>
+                                <a href="https://www.linkedin.com/in/thameera-dananjaya-aa54371b4/"><i class="fab fa-linkedin fa-2x px-2"></i></a>
+                                <a href="https://github.com/Thameera08"><i class="fab fa-github fa-2x px-2"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-1 mb-10">
+
+                </div>
+                
+
+            </div>
 
         </section>
 
     </main>
 
     <footer>
-        <div class="container p-0">
-            <div class="row text-center">
-                <div class="col-md-12 col-sm-12 ">
-                    <h1 class="text-light">About Us</h1>
-                    <p class="text-muted pt-3"> Snap Library is a method of who are willing to take note and refer the
-                        short
-                        note in the internet. This Snap Library fully authorized under the NUHATA group.
-                    </p>
-                </div>
-            </div>
-            <!-- footer images -->
-            <div class="row text-center pt-4">
-                <div class="col-md-12 col-sm-12">
-                    <a href="#" class="text-secondary text-decoration-none">
-                        <i class="fab fa-instagram fa-2x px-2"></i>
-                        <i class="fab fa-facebook fa-2x px-2"></i>
-                        <i class="fab fa-linkedin fa-2x px-2"></i>
-                        <i class="fab fa-github fa-2x px-2"></i> </a>
-                    <p class="pt-4 text-muted"> Copyright © 2021 All Right Reserverd <span>NUHATA</span> </p>
-                </div>
+    <div class="container p-0">
+        <div class="row text-center">
+            <div class="col-md-12 col-sm-12 ">
+                <h1 class="text-light">About Us</h1>
+                <p class="text-muted pt-3"> Snap Library is a method of who are willing to take note and refer the short note in the internet. This Snap Library fully authorized under the NUHATA group.
+                </p>
             </div>
         </div>
-    </footer>
-
+        <!-- footer images -->
+        <div class="row text-center pt-4">
+            <div class="col-md-12 col-sm-12">
+                <a href="#" class="text-secondary text-decoration-none">
+                    <i class="fab fa-instagram fa-2x px-2"></i>
+                    <i class="fab fa-facebook fa-2x px-2"></i>
+                    <i class="fab fa-linkedin fa-2x px-2"></i>
+                    <i class="fab fa-github fa-2x px-2"></i> </a>
+                <p class="pt-4 text-muted"> Copyright © 2021 All Right Reserverd <span>NUHATA</span> </p>
+            </div>
+        </div>
+    </div>
+</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
         </script>
