--- a/src/notes.html
+++ b/src/notes.html
@@ -89,6 +89,6 @@
       
     </div>
    
-    <script src="./js/main.js" type="module"></script>
+    <script src="js/main.js" type="module"></script>
 </body>
 </html>
