note.html change 2

--- a/src/notes.html
+++ b/src/notes.html
@@ -14,7 +14,7 @@
 
 	<!-- Theme included stylesheets -->
 	<link href="//cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
-	<link href="//cdn.quilljs.com/1.3.6/quill.bubble.css" rel="stylesheet">
+	<!-- <link href="//cdn.quilljs.com/1.3.6/quill.bubble.css" rel="stylesheet"> -->
 
 <script src="https://kit.fontawesome.com/25a5513389.js" crossorigin="anonymous"></script>
 </head>
